# sss-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: basic_sharing.rs  wrapped_sharing.rs
src/: basic_sharing.rs  fuzz_tests.rs  lib.rs  raw_share.rs  share.rs  sharer.rs  utils.rs  wrapped_sharing.rs
src/geometry/: fraction.rs  galois_polynomial.rs  mod.rs  point.rs  polynomial.rs  term.rs  utils.rs
tests/: benchmarks.rs
