[package]
name = "sss-rs"
version = "0.10.1"
authors = ["bilowik"]
edition = "2018"
description = "A secret sharing scheme implemented in Rust"
repository = "https://github.com/bilowik/sss-rs"
categories = ["cryptography"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "https://travis-ci.com/bilowik/sss-rs", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lazy_static = "1.3.0"
sha3 = "0.10.6"
hex = "0.4.3"
galois_2p8 = "0.1.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "basic_sharing"
harness = false
